--- a/package.json
+++ b/package.json
@@ -124,7 +124,8 @@
     "compile": "rimraf ./build && tsc",
     "package": "gulp package",
     "lint": "tslint -p .",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
+    "postinstall": "cd ./node_modules/typeorm && npm install && npm compile"
   },
   "bin": {
     "typeorm": "./cli.js"
